syntax = "proto3";

package order;

import "google/protobuf/empty.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

// ----------- MESSAGE DEFINITIONS ------------

message OrderItem {
  string id = 1;
  string orderId = 2;
  string productsId = 3;
  int32 quantity = 4;
  double unitPrice = 5;
  string username = 6;
  google.protobuf.Timestamp modifiedAt = 7;
}

message Order {
  string id = 1;
  double total = 2;
  string status = 3;
  repeated OrderItem items = 4;
  string username = 5;
  google.protobuf.Timestamp modifiedAt = 6;
}

message OrderItemInput {
  string productId = 1;
  int32 quantity = 2;
  double unitPrice = 3;
}

// ----------- REQUEST / RESPONSE DEFINITIONS ------------

message CreateOrderRequest {
  double totalAmount = 1;
  repeated OrderItemInput items = 2;
  string username = 3;
}

message OrderResponse {
  int32 status = 1;
  string message = 2;
  Order order = 3;
}

message GetOrderByIdRequest {
  string username = 1;
  string id = 2;          
}

message UpdateOrderStatusRequest {
  string id = 1;
  string status = 2;
}

message ListOrdersResponse {
  int32 status = 1;
  string message = 2;
  repeated Order orders = 3;
}

message GetOrdersRequest {
  string username = 1;   
}

message PaymentMethod{
  string username = 1;
  string method = 2;
}

message CheckoutResponse{
  int32 status = 1;
  string message = 2;
  string notification = 3;
}

// ----------- SERVICE DEFINITION ------------

service OrderService {
  rpc GetOrders(GetOrdersRequest) returns (ListOrdersResponse);
  rpc GetOrderById(GetOrderByIdRequest) returns (OrderResponse);
  rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
  rpc UpdateStatusOrder(UpdateOrderStatusRequest) returns (OrderResponse);
  rpc Checkout(PaymentMethod) returns (CheckoutResponse);
}
